ontol/ontol-compiler/test-cases/error/rel/object_property_in_foreign_domain.on
use 'foreign' as foreign

def bar (
    rel .'foo': foreign.foo // This is OK
)

def baz (
    rel .'foo'::'baz'
        foreign.foo // ERROR definition is sealed and cannot be modified
)

//@ src_name=foreign
def foo ()
